openjdk: honour alternativeJREDirectory — load platform types from a chosen JDK
The --jre option / InputConfiguration.alternativeJREDirectory() has existed for
years (CLI, builder, JSON) but the openjdk front-end ignored it: its javac task
hardcoded --release=26, so platform (java.*) types always came from the JDK
running the analyzer. In JDK 26 several long-deprecated APIs were actually removed
(e.g. java.applet.Applet, JEP 504), so code using them could no longer be parsed.

When an alternative JRE is configured, pass javac --system <jdk-home> instead of
--release, resolving the platform against that JDK. --system replaces --release;
--enable-preview does not apply to a fixed older image. In the JDK-internals mode
(which deliberately opens the running JDK's non-exported packages) the alternative
JRE is logged and ignored.

TestAlternativeJRE proves it: running on JDK 26 (no java.applet.Applet), pointing
the parser at a JDK <= 25 resolves the field type to java.applet.Applet. Skips
when no such JDK home is given via -Dtest.jdk21.home / $JDK21_HOME (forwarded to
the test JVM by the build). Full :maddi-inspection-openjdk:test suite green.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>